--- a/data/themes/default.toml
+++ b/data/themes/default.toml
@@ -6,8 +6,8 @@ light = false
 
 # Primary
 primary = "hsl(0.94, 0.90, 0.68)"
-primary_light = "hsl(339, 90%, 78%)"
-primary_dark = "hsl(339, 90%, 58%)"
+primary_light = "hsl(0.0, 0.0, 0.55)"
+primary_dark = "hsl(0.0, 0.0, 0.55)"
 
 # Menu
 menu_primary = "rgb(20, 22, 34)"
